# vvz-plan-manager

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  projectid  pyproject.toml
.cursor/agents/: coder_auto.md  (+9 more)
client/: pyproject.toml
client/plan_manager_client/: __init__.py  client.py  config.py  dispatch.py  export_fetch_chunks.py  export_fetch_request.py  export_fetch_unpack.py  export_fetch_verify.py  facade_agent_config_mixin.py  facade_bug_project_mixin.py  facade_context_gate_mixin.py  facade_plan_hrs_mixin.py  facade_runtime_mixin.py  facade_step_graph_mixin.py  server_api.py
client/plan_manager_client/delivery/: __init__.py  archive.py  atomicity.py  commit.py  destination.py  provenance.py  upload.py
client/tests/: test_client_server_api_sync.py
docker/: Dockerfile  entrypoint.sh  healthcheck.sh
docs/: HRS-semantictree.md  PROJECT_RULES.md  plan-tooling-task.md  projectid.example.json
mtls-certs/: README.md  register_primitive_server.py  simple_mtls_server.py  start_and_register_server.py
plan_manager/: __init__.py  command_catalog_cli.py  hooks.py  main.py
plan_manager_db/: init.sh
scripts/: dump_b64.txt  dump_plan.txt  live_smoke.py  make_tar.txt  pack_plan.txt  release.sh
tests/: __init__.py  test_anchor_confirmation.py  test_anchor_confirmation_commands.py  test_async_execution_contract.py  test_audit_list_command.py  test_b9_step_content_and_file_order.py  test_bug_26fa21a5_ts_inputs_outputs_write_rejection.py  test_bug_3de7a081_gs_coverage_live_read.py  test_bug_5ebe3ce5_write_intent_negation.py  test_bug_761ee3dd_step_id_selector_docs.py  test_bug_8a13977d_list_view_projection.py  test_bug_ad529347_ts_inputs_outputs_schema.py  test_bug_c3950b83_plan_completed_lock.py  test_bug_e197b94a_branch_scope_selectors.py  test_bug_fix_started_at.py  test_bug_status_terminal_guard.py  test_capability_prose_truthfulness.py  test_command_catalog_contract.py  test_command_registration.py  test_command_timing_collection.py  test_command_timing_stats_command.py  test_content_fingerprint.py  test_context_blocks.py  test_context_blocks_currency.py  test_cr1_info_inclusion.py  test_cr2_scope_boundary_contract.py  test_cr3_scope_boundary_contract.py  test_cr3_uniform_contract_group.py  test_cr4_integration_frozen_recursive_delete.py  test_cr4_scope_boundary_contract.py  test_cr4_uniform_contract_group.py  test_crud_matrix_completeness_contract.py  test_dependents_closure.py  test_embedding_batch_chunking.py  test_embedding_chunk.py  test_embedding_client_integration.py  test_error_code_reachability_contract.py  test_error_code_reachability_cr1.py  test_export_archive.py  test_export_byte_source_decoupling.py  (+95 more)
(+1275 files in other folders)
