[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-manager"
version = "0.1.16"
description = "Plan Manager server: hierarchical development plan storage, verification, and exchange service."
requires-python = ">=3.12"
dependencies = [
    "mcp-proxy-adapter>=8.10.19",
    "psycopg[binary]>=3",
    "pydantic>=2",
    "numpy",
    "PyYAML",
    "embed-client>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
]

[tool.setuptools.packages.find]
include = ["plan_manager*"]

[tool.setuptools.package-data]
plan_manager = ["_build/*"]
