[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-manager"
version = "0.1.47"
description = "Plan Manager server: hierarchical development plan storage, verification, and exchange service."
requires-python = ">=3.12"
dependencies = [
    "mcp-proxy-adapter>=8.10.20",
    "psycopg[binary]>=3",
    "pydantic>=2",
    "numpy",
    "PyYAML",
    "embed-client>=4.0.1",
    "code-analysis-client>=1.6.51",
    "sqlglot>=25",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
]

[project.scripts]
plan-manager-catalog-dump = "plan_manager.command_catalog_cli:main"

[tool.setuptools.packages.find]
include = ["plan_manager*"]

[tool.setuptools.package-data]
plan_manager = ["_build/*"]
