[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-manager-client"
version = "0.1.59"
description = "First-class client library for the plan_manager JSON-RPC API: full command-surface facade plus export delivery module boundary."
requires-python = ">=3.12"
dependencies = [
    "mcp-proxy-adapter>=8.10.20",
]

[project.optional-dependencies]
ca = [
    "code-analysis-client>=1.6.51",
]
dev = [
    "pytest>=9",
]

[tool.setuptools.packages.find]
include = ["plan_manager_client*"]
